--- a/index.html
+++ b/index.html
@@ -113,20 +113,20 @@
             <h1>THE PART YOU'RE LOOKING FOR</h1>
 
             <h2>Apple Wallpaper Designs</h2>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Apple Wallpaper Designs\1.png"/>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Apple Wallpaper Designs\2.png"/>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Apple Wallpaper Designs\3.png"/>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Apple Wallpaper Designs\4.png"/>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Apple Wallpaper Designs\5.png"/>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Apple Wallpaper Designs\6.png"/>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Apple Wallpaper Designs\7.png"/>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Apple Wallpaper Designs\8.png"/>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Apple Wallpaper Designs\9.png"/>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Apple Wallpaper Designs\10.png"/>
+            <img src="Apple Wallpaper Designs\1.png"/>
+            <img src="Apple Wallpaper Designs\2.png"/>
+            <img src="Apple Wallpaper Designs\3.png"/>
+            <img src="Apple Wallpaper Designs\4.png"/>
+            <img src="Apple Wallpaper Designs\5.png"/>
+            <img src="Apple Wallpaper Designs\6.png"/>
+            <img src="Apple Wallpaper Designs\7.png"/>
+            <img src="Apple Wallpaper Designs\8.png"/>
+            <img src="Apple Wallpaper Designs\9.png"/>
+            <img src="Apple Wallpaper Designs\10.png"/>
 
             <h2> Logo Designing Practice from Udemy </h2>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Screenshot (152).png"/>
-            <img src="C:\Users\kaura\OneDrive\Documents\HTML docs\The Designer in Me\Screenshot (153).png"/>
+            <img src="Screenshot (152).png"/>
+            <img src="Screenshot (153).png"/>
 
             <h2> Logos designed by Me </h2>
             <img src="Logos/anmolandroidlogos.jpeg"/>
