--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
         </div>
         <div id="final">
             <h1>FINAL MESSAGE</h1>
+            So, that's the end of it. Since, I'm still a beginner and a self-learner right now wihout any internship or exposure, I will deeply appreciate if you go easy on me and take the images lightly for now. The bad ones will soon be removed from here once I start making the ones worth your good attention and observation.
+            <br>
+            Thankyou for your patience and tolerance.
+            
         </div>
     </body>
 </html>
