--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
             <h2> Logo Designing Practice from Udemy </h2>
             <img src="Screenshot (152).png"/>
             <img src="Screenshot (153).png"/>
+            <img src="Screenshot (154).png"/>
 
             <h2> Logos designed by Me </h2>
             <img src="Logos/anmolandroidlogos.jpeg"/>
