--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             #final{
                 margin-top: 75px;
                 background-image:url("background.png");
-                font-family: cursive;
+                font-size: 20pt;
+                font-family:cursive;
                 color: rgb(202, 40, 140);
                 text-align: center;
                 text-shadow: oldlace;
