--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                 margin-right: 10px;
             }
             img{
-                height: 350px;
-                width: 450px;
+                height: 500px;
+                width: 600px;
                 margin-right: 20px;
                 margin-bottom: 20px;
                 border: rgb(202, 40, 140);
@@ -133,6 +133,7 @@
             <h2> Logos designed by Me </h2>
             <img src="Logos/anmolandroidlogos.jpeg"/>
             <img src="Logos/Royal CTV Gold Logo.png"/>
+            <img src="Screenshot (155).png"/>
 
             <h2> Canva Designs </h2>
             <img src="Canva designs/doglove.png"/>
