--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@
             So, that's the end of it. Since, I'm still a beginner and a self-learner right now wihout any internship or exposure, I will deeply appreciate if you go easy on me and take the images lightly for now. The bad ones will soon be removed from here once I start making the ones worth your good attention and observation.
             <br>
             Thankyou for your patience and tolerance.
+            <p>
+                <img src="https://www.bing.com/th/id/OGC.1bf6a0f7a8ac612e61d9e4fd9285d186?pid=1.7&rurl=https%3a%2f%2fi.gifer.com%2f7SIm.gif&ehk=YOagdWYlJOFB4LXU1lwfGqT4Ba1cgiPWDFbEvSSRn%2fE%3d">
+            <i style="color:white" class="fa fa-2x fa-mobile"> <area>+917087711008</i>
+            <br>
+            <i style="color: white" class="fa fa-2x fa-instagram"> <area><a href="https://www.instagram.com/" target="_blank"> @ashneeeet._</a></i>
+            <br>
+            <i style="color: white" class="fa fa-2x fa-mail-forward"><area> kaurashneet.02@gmail.com</i>
+            <br>
+            <i style="color: white" class="fa fa-2x fa-linkedin"> <area><area> <a href="https://www.linkedin.com/in/ashneet-kaur-7a7304201/" target="_blank">Ashneet Kaur</a></i>
+            </p>
             
         </div>
     </body>
