--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
                 margin-left: 10px;
                 margin-right: 10px;
             }
+            #contact {
+                margin-top: 75px;
+                background-image:url("background.png");
+                font-size: 20pt;
+                font-family:cursive;
+                color: rgb(202, 40, 140);
+                text-align: center;
+                text-shadow: oldlace;
+                margin-left: 10px;
+                margin-right: 10px;
+            }
             img{
                 height: 500px;
                 width: 800px;
@@ -104,6 +115,7 @@
           <li> <a href="#abt"> ABOUT </a></li>
           <li> <a href="#dni">THE PART YOU'RE LOOKING FOR</a></li>
           <li><a href="#final">FINAL MESSAGE</a></li>
+          <li><a href="#contact">CONTACT ME </a></li>
         </ul></div>
 
         <div id="abt">
@@ -163,7 +175,9 @@
             <br>
             Thankyou for your patience and tolerance.
             <p>
-  
+        </div>
+      <div id="contact">
+          <h1> CONTACT ME </h1>
             <i style="color:rgb(202, 40, 140)" class="fa fa-2x fa-mobile"> <area>+917087711008</i>
             <br>
             <i style="color: rgb(202, 40, 140)" class="fa fa-2x fa-instagram"> <area><a href="https://www.instagram.com/" target="_blank"> @ashneeeet._</a></i>
@@ -172,7 +186,6 @@
             <br>
             <i style="color: rgb(202, 40, 140)" class="fa fa-2x fa-linkedin"> <area><area> <a href="https://www.linkedin.com/in/ashneet-kaur-7a7304201/" target="_blank">Ashneet Kaur</a></i>
             </p>
-            
         </div>
     </body>
 </html>
