--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@
             <h1>THE PART YOU'RE LOOKING FOR</h1>
             
             <h2> Logo Designing Practice from Udemy </h2>
+            <img src="abc Logo Design Practice from Udemy.png"/>
             <img src="Screenshot (152).png"/>
             <img src="Screenshot (153).png"/>
             <img src="Screenshot (154).png"/>
+            <img src="3D Logo Design Practice from Udemy"/>
 
             <h2> Logos designed by Me </h2>
             <img src="Logos/anmolandroidlogos.jpeg"/>
