--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <img src="Screenshot (152).png"/>
             <img src="Screenshot (153).png"/>
             <img src="Screenshot (154).png"/>
-            <img src="3D Logo Design Practice from Udemy"/>
+            <img src="3D Logo Design Practice from Udemy.png"/>
 
             <h2> Logos designed by Me </h2>
             <img src="Logos/anmolandroidlogos.jpeg"/>
