--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
 
             <h2> Canva Designs </h2>
             <img src="Canva designs/doglove.png"/>
+            <img src="P1.png"/>
+            <img src="P2.png"/>
+            <img src="P3.mp4"/>
 
             <h2> Illustrations </h2>
             <img src="Illustrations/booklovers.png"/>
