--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <img src="Canva designs/doglove.png"/>
             <img src="P1.png"/>
             <img src="P2.png"/>
-            <img src="P3.mp4"/>
+            <embed src="P3.mp4" autostart="false" /></embed>
 
             <h2> Illustrations </h2>
             <img src="Illustrations/booklovers.png"/>
