--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             <img src="Canva designs/doglove.png"/>
             <img src="P1.png"/>
             <img src="P2.png"/>
-            <video src="P3.mp4" autostart="false" /></video>
+            <video src="P3.mp4"controls>
+            </video>
 
             <h2> Illustrations </h2>
             <img src="Illustrations/booklovers.png"/>
