--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <img src="Canva designs/doglove.png"/>
             <img src="P1.png"/>
             <img src="P2.png"/>
-            <video src="P3.mp4"controls>
+            <video src="P3.mp4"autostart="true"controls>
             </video>
 
             <h2> Illustrations </h2>
