--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@
                 margin-bottom: 20px;
                 border: rgb(202, 40, 140);
             }
-            
+            video{
+                height: 500px;
+                width: 800px;
+                margin-right: 20px;
+                margin-bottom: 20px;
+                border: rgb(202, 40, 140);
+            }
         </style>  
     </head>
     <body>
