--- a/index.html
+++ b/index.html
@@ -163,7 +163,12 @@
             <img src="P2.png"/>
             <video src="P3.mp4"autostart="true"controls>
             </video>
-
+            <video src="Ad1.mp4"autostart="true"controls>
+            </video>
+            <video src="Ad2.mp4"autostart="true"controls>
+            </video>
+            <video src="Ad3.mp4"autostart="true"controls>
+            </video>
             <h2> Illustrations </h2>
             <img src="Illustrations/booklovers.png"/>
             <img src="Illustrations/lazy girl.png"/>
