--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
                 margin-bottom: 20px;
                 border: rgb(202, 40, 140);
             }
+            #udemy{
+                height: 250px;
+                width: 400px;
+                margin-right: 20px;
+                margin-bottom: 20px;
+                border: rgb(202, 40, 140);
+            }
         </style>  
     </head>
     <body>
@@ -133,11 +140,12 @@
             <h1>THE PART YOU'RE LOOKING FOR</h1>
             
             <h2> Logo Designing Practice from Udemy </h2>
+            <div="udemy">
             <img src="abc Logo Design Practice from Udemy.png"/>
             <img src="Screenshot (152).png"/>
             <img src="Screenshot (153).png"/>
             <img src="Screenshot (154).png"/>
-            <img src="3D Logo Design Practice from Udemy.png"/>
+            <img src="3D Logo Design Practice from Udemy.png"/></div>
 
             <h2> Logos designed by Me </h2>
             <img src="Logos/anmolandroidlogos.jpeg"/>
