--- a/index.html
+++ b/index.html
@@ -142,9 +142,10 @@
             <img src="3D Logo Design Practice from Udemy.png"/>
 
             <h2> Logos designed by Me </h2>
-            <img src="Logos/anmolandroidlogos.jpeg"/>
+            <img src="Pink Moon Neutral Logo.png"/>
             <img src="Logos/Royal CTV Gold Logo.png"/>
             <img src="Screenshot (155).png"/>
+            <img src="Logos/anmolandroidlogos.jpeg"/>
             
             <h2>Apple Wallpaper Designs</h2>
             <img src="Apple Wallpaper Designs\1.png"/>
