--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
             <img src="3D Logo Design Practice from Udemy.png"/>
 
             <h2> Logos designed by Me </h2>
-            <img src="Pink Moon Neutral Logo.png"/>
+            <img src="Pink Moon Neutral Logo Screenshot.png"/>
+            <img src="Royal CTV Gold Logo 2 Image.png"/>
             <img src="Logos/Royal CTV Gold Logo.png"/>
             <img src="Screenshot (155).png"/>
             <img src="Logos/anmolandroidlogos.jpeg"/>
