--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
             <img src="Illustrations/lazy girl.png"/>
             <img src="Illustrations/Midi keyboard.png"/>
             <img src="Illustrations/shapes n colors.jpg"/>
+            <img src="heartgirl.png"/>
 
             <h2> Business Cards </h2>
             <img src="business cards project 1.png"/>
