--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@
             </video>
             <video src="Ad3.mp4"autostart="true"controls>
             </video>
+            <img src="Everyone is different. Everyone suffers. Why not live and let live.png"/>
+            <img src="Whatever Happens.gif"/>
             <h2> Illustrations </h2>
             <img src="Illustrations/booklovers.png"/>
             <img src="Illustrations/lazy girl.png"/>
