--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
         <title>The Designer In Me || ♥Ashneet♥ </title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
@@ -100,18 +101,20 @@
                 margin-right: 10px;
             }
             img{
-                height: 500px;
-                width: 800px;
-                margin-right: 20px;
-                margin-bottom: 20px;
-                border: rgb(202, 40, 140);
+                width: 182px;
+                padding: 4px; 
+                background: #eee; 
+                text-align: center;
+	            float: left; 
+                margin: 0 7px 14px 7px
             }
             video{
-                height: 500px;
-                width: 800px;
-                margin-right: 20px;
-                margin-bottom: 20px;
-                border: rgb(202, 40, 140);
+                width: 182px;
+                padding: 4px; 
+                background: #eee; 
+                text-align: center;
+	            float: left; 
+                margin: 0 7px 14px 7px
             }
             
         </style>  
