--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
                 margin-left: 10px;
                 margin-right: 10px;
             }
-            img{
+            #dni{
                 width: 500px;
                 padding: 4px;                 
                 text-align: center;
 	            float: left; 
                 margin: 0 7px 14px 7px
             }
-            video{
+            #dni{
                 width: 500px;
                 padding: 4px;
                 text-align: center;
@@ -194,10 +194,10 @@
         </div>
         <div id="final">
             <h1>FINAL MESSAGE</h1>
-            So, that's the end of it. Since, I'm still a beginner and a self-learner right now wihout any internship or exposure, I will deeply appreciate if you go easy on me and take the images lightly for now. The bad ones will soon be removed from here once I start making the ones worth your good attention and observation.
+            <p> So, that's the end of it. Since, I'm still a beginner and a self-learner right now wihout any internship or exposure, I will deeply appreciate if you go easy on me and take the images lightly for now. The bad ones will soon be removed from here once I start making the ones worth your good attention and observation.
             <br>
             Thankyou for your patience and tolerance.
-            <p>
+            </p>
         </div>
       <div id="contact">
           <h1> CONTACT ME </h1>
