--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
                 margin-left: 10px;
                 margin-right: 10px;
             }
-            #dni{
+            img{
                 width: 500px;
                 padding: 4px;                 
                 text-align: center;
-	            float: left; 
+	        float: left; 
                 margin: 0 7px 14px 7px
             }
-            #dni{
+            video{
                 width: 500px;
                 padding: 4px;
                 text-align: center;
