--- a/index.html
+++ b/index.html
@@ -100,19 +100,20 @@
                 margin-left: 10px;
                 margin-right: 10px;
             }
-            img{
-                width: 500px;
-                padding: 4px;                 
-                text-align: center;
-	        float: left; 
-                margin: 0 7px 14px 7px
+		img{
+                height: 350px;
+                width: 450px;
+                margin-right: 20px;
+                margin-bottom: 20px;
+                border: rgb(202, 40, 140);
+            
             }
-            video{
-                width: 500px;
-                padding: 4px;
-                text-align: center;
-	        float: left; 
-                margin: 0 7px 14px 7px
+             video{
+                height: 350px;
+                width: 450px;
+                margin-right: 20px;
+                margin-bottom: 20px;
+                border: rgb(202, 40, 140);
             }
             
         </style>  
