--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <img src="Screenshot (154).png"/>
             <img src="3D Logo Design Practice from Udemy.png"/>
 
-            <img src="girl with back to the cam.png"width="250px" height="350px"/>
+            <img src="girl with back to the cam.png" width="250px" height="350px">
 	    <img src="suzama.png"/>
 	   
             <img src="Pink Moon Neutral Logo Screenshot.png"/>
