--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
              <h1>ABOUT</h1>
              In this website, I would like the visitors to go through some of or maybe all of my graphic designs. I'm still a beginner and have not made many designs as such. But I would love it if you could help me by reviewing my designs, tell me about my mistakes, compliment and comment, and most importantly, enjoy the works of art.
              I hope you will like this journey into my city of designs and will visit again soon!
+		<br>
+		Oh wait! Access my Digital Art Portfolio <a href="https://ashneeeet.github.io/Messing-Around-With-Digital-Art/> here </a>
         </div>
         <div id="dni">
             <h1>THE PART YOU'RE LOOKING FOR</h1>
