--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
 
             <img src="girl with back to the cam.png" width="250px" height="350px">
 	    <img src="suzama.png"/>
-	   
+	    <img src="TRY ME.png"/>
+	    <img src="summer camp poster.png"/>
             <img src="Pink Moon Neutral Logo Screenshot.png"/>
             <img src="Royal CTV Gold Logo 2 Image.png"/>
             <img src="Logos/Royal CTV Gold Logo.png"/>
