--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
              In this website, I would like the visitors to go through some of or maybe all of my graphic designs. I'm still a beginner and have not made many designs as such. But I would love it if you could help me by reviewing my designs, tell me about my mistakes, compliment and comment, and most importantly, enjoy the works of art.
              I hope you will like this journey into my city of designs and will visit again soon!
 		<br>
-		Oh wait! Access my Digital Art Portfolio <a href="https://ashneeeet.github.io/Messing-Around-With-Digital-Art"/> here </a>
+		Oh wait! Access my Digital Art Portfolio <a href="https://ashneeeet.github.io/Messing-Around-With-Digital-Art"/> here. </a>
         </div>
         <div id="dni">
             <h1>THE PART YOU'RE LOOKING FOR</h1>
@@ -154,10 +154,11 @@
             <img src="Screenshot (154).png"/>
             <img src="3D Logo Design Practice from Udemy.png"/>
 
-            <img src="girl with back to the cam.png" width="250px" height="350px">
+            <img src="girl with back to the cam.png" width="250px" height="350px"/>
 	    <img src="suzama.png"/>
 	    <img src="TRY ME.png"/>
 	    <img src="summer camp poster.png"/>
+		
             <img src="Pink Moon Neutral Logo Screenshot.png"/>
             <img src="Royal CTV Gold Logo 2 Image.png"/>
             <img src="Logos/Royal CTV Gold Logo.png"/>
