--- a/index.html
+++ b/index.html
@@ -137,16 +137,16 @@
         <div id="dni">
             <h1>THE PART YOU'RE LOOKING FOR</h1>
             
-            <video src="P3.mp4"autostart="false"controls>
-            </video>
-            <video src="Ad1.mp4"autostart="false"controls>
-            </video>
-            <video src="Ad2.mp4"autostart="false"controls>
-            </video>
-            <video src="Ad3.mp4"autostart="false"controls>
-            </video>
-	    <img src="P1.png"/>
-            <img src="P2.png"/>
+            <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <video src="P3.mp4"autostart="false"controls>
+		    </video> </a>
+            <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <video src="Ad1.mp4"autostart="false"controls>
+		    </video> </a>
+            <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <video src="Ad2.mp4"autostart="false"controls>
+		    </video> </a>
+            <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <video src="Ad3.mp4"autostart="false"controls>
+		    </video> </a>
+	    <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <img src="P1.png"> </a>
+	    <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <img src="P2.png"> </a>
             
             <img src="abc Logo Design Practice from Udemy.png"/>
             <img src="Screenshot (152).png"/>
