--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 	    <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <img src="P1.png"> </a>
 	    <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <img src="P2.png"> </a>
             
-            <img src="abc Logo Design Practice from Udemy.png"/>
-            <img src="Screenshot (152).png"/>
-            <img src="Screenshot (153).png"/>
-            <img src="Screenshot (154).png"/>
-            <img src="3D Logo Design Practice from Udemy.png"/>
+            <a href="https://ashneeeet.github.io/udemylogodesigns/"> <img src="abc Logo Design Practice from Udemy.png"/> </a>
+            <a href="https://ashneeeet.github.io/udemylogodesigns/"> <img src="Screenshot (152).png"/> </a>
+            <a href="https://ashneeeet.github.io/udemylogodesigns/"> <img src="Screenshot (153).png"/> </a>
+            <a href="https://ashneeeet.github.io/udemylogodesigns/"> <img src="Screenshot (154).png"/> </a>
+            <a href="https://ashneeeet.github.io/udemylogodesigns/"> <img src="3D Logo Design Practice from Udemy.png"/> </a>
 
             <img src="girl with back to the cam.png" width="250px" height="350px"/>
 	    <img src="suzama.png"/>
