--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             <a href="https://ashneeeet.github.io/udemylogodesigns/"> <img src="Screenshot (154).png"/> </a>
             <a href="https://ashneeeet.github.io/udemylogodesigns/"> <img src="3D Logo Design Practice from Udemy.png"/> </a>
 
-            <img src="girl with back to the cam.png" width="250px" height="350px"/>
-	    <img src="suzama.png"/>
+            <a href="https://ashneeeet.github.io/girlwithbackoncam/"> <img src="girl with back to the cam.png" width="250px" height="350px"/> </a>
+		<a href="https://ashneeeet.github.io/suzama/"> <img src="suzama.png"/> </a>
 	    <img src="TRY ME.png"/>
 	    <img src="summer camp poster.png"/>
 		
