--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
             <a href="https://ashneeeet.github.io/girlwithbackoncam/"> <img src="girl with back to the cam.png" width="250px" height="350px"/> </a>
 		<a href="https://ashneeeet.github.io/suzama/"> <img src="suzama.png"/> </a>
-	    <img src="TRY ME.png"/>
+		<a href="https://ashneeeet.github.io/try-me-backstory/"> <img src="TRY ME.png"/> </a>
 	    <img src="summer camp poster.png"/>
 		
             <img src="Pink Moon Neutral Logo Screenshot.png"/>
