--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <a href="https://ashneeeet.github.io/girlwithbackoncam/"> <img src="girl with back to the cam.png" width="250px" height="350px"/> </a>
 		<a href="https://ashneeeet.github.io/suzama/"> <img src="suzama.png"/> </a>
 		<a href="https://ashneeeet.github.io/try-me-backstory/"> <img src="TRY ME.png"/> </a>
-	    <img src="summer camp poster.png"/>
+	    <a href="https://ashneeeet.github.io/summercamp-poster-backstory/"> <img src="summer camp poster.png"/> </a>
 		
             <img src="Pink Moon Neutral Logo Screenshot.png"/>
             <img src="Royal CTV Gold Logo 2 Image.png"/>
