--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div id="abt">
              <h1>ABOUT</h1>
              In this website, I would like the visitors to go through some of or maybe all of my graphic designs. I'm still a beginner and have not made many designs as such. But I would love it if you could help me by reviewing my designs, tell me about my mistakes, compliment and comment, and most importantly, enjoy the works of art.
-             Click on the design to view its backstory. I hope you will like this journey into my city of designs and will visit again soon!
+		<b> Click on the design to view its backstory.</b> I hope you will like this journey into my city of designs and will visit again soon!
 		<br>
 		Oh wait! Access my Digital Art Portfolio <a href="https://ashneeeet.github.io/Messing-Around-With-Digital-Art"/> here. </a>
         </div>
@@ -157,7 +157,7 @@
 		<a href="https://ashneeeet.github.io/try-me-backstory/"> <img src="TRY ME.png"/> </a>
 	    <a href="https://ashneeeet.github.io/summercamp-poster-backstory/"> <img src="summer camp poster.png"/> </a>
 		
-            <img src="Pink Moon Neutral Logo Screenshot.png"/>
+            <a href="https://ashneeeet.github.io/pink-moon-logo-backstory/"> <img src="Pink Moon Neutral Logo Screenshot.png"/> </a>
             <img src="Royal CTV Gold Logo 2 Image.png"/>
             <img src="Logos/Royal CTV Gold Logo.png"/>
             <img src="Screenshot (155).png"/>
