--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
 	    <a href="https://ashneeeet.github.io/summercamp-poster-backstory/"> <img src="summer camp poster.png"/> </a>
 		
             <a href="https://ashneeeet.github.io/pink-moon-logo-backstory/"> <img src="Pink Moon Neutral Logo Screenshot.png"/> </a>
-            <img src="Royal CTV Gold Logo 2 Image.png"/>
-            <img src="Logos/Royal CTV Gold Logo.png"/>
+            <a href="https://ashneeeet.github.io/androidlogosbackstory/"> <img src="Royal CTV Gold Logo 2 Image.png"/> </a>
+            <a href="https://ashneeeet.github.io/androidlogosbackstory/"> <img src="Logos/Royal CTV Gold Logo.png"/> </a>
             <img src="Screenshot (155).png"/>
-            <img src="Logos/anmolandroidlogos.jpeg"/>
+            <a href="https://ashneeeet.github.io/androidlogosbackstory/"> <img src="Logos/anmolandroidlogos.jpeg"/> </a>
             <img src="Illustrations/lazy girl.png"/>
            
             <img src="business cards project 1.png"/>
