--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <a href="https://ashneeeet.github.io/androidlogosbackstory/"> <img src="Logos/Royal CTV Gold Logo.png"/> </a>
             <a href="https://ashneeeet.github.io/lilliamlogobackstory/"> <img src="Screenshot (155).png"/> </a>
             <a href="https://ashneeeet.github.io/androidlogosbackstory/"> <img src="Logos/anmolandroidlogos.jpeg"/> </a>
-            <img src="Illustrations/lazy girl.png"/>
+            <a href="https://ashneeeet.github.io/lazy-girl-backstory/"> <img src="Illustrations/lazy girl.png"/> </a>
            
             <img src="business cards project 1.png"/>
             <img src="business cards project 2.png"/>
