--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
             <a href="https://ashneeeet.github.io/androidlogosbackstory/"> <img src="Logos/anmolandroidlogos.jpeg"/> </a>
             <a href="https://ashneeeet.github.io/lazy-girl-backstory/"> <img src="Illustrations/lazy girl.png"/> </a>
            
-            <img src="business cards project 1.png"/>
-            <img src="business cards project 2.png"/>
-            <img src="business cards project 3.png"/>
+            <a href="https://ashneeeet.github.io/business-cards-project-backstory/"> <img src="business cards project 1.png"/> </a>
+            <a href="https://ashneeeet.github.io/business-cards-project-backstory/"> <img src="business cards project 2.png"/> </a>
+            <a href="https://ashneeeet.github.io/business-cards-project-backstory/"> <img src="business cards project 3.png"/> </a>
             <img src="Apple Wallpaper Designs\1.png"/>
             <img src="Apple Wallpaper Designs\2.png"/>
             <img src="Apple Wallpaper Designs\3.png"/>
