--- a/index.html
+++ b/index.html
@@ -167,16 +167,16 @@
             <a href="https://ashneeeet.github.io/business-cards-project-backstory/"> <img src="business cards project 1.png"/> </a>
             <a href="https://ashneeeet.github.io/business-cards-project-backstory/"> <img src="business cards project 2.png"/> </a>
             <a href="https://ashneeeet.github.io/business-cards-project-backstory/"> <img src="business cards project 3.png"/> </a>
-            <img src="Apple Wallpaper Designs\1.png"/>
-            <img src="Apple Wallpaper Designs\2.png"/>
-            <img src="Apple Wallpaper Designs\3.png"/>
-            <img src="Apple Wallpaper Designs\4.png"/>
-            <img src="Apple Wallpaper Designs\5.png"/>
-            <img src="Apple Wallpaper Designs\6.png"/>
-            <img src="Apple Wallpaper Designs\7.png"/>
-            <img src="Apple Wallpaper Designs\8.png"/>
-            <img src="Apple Wallpaper Designs\9.png"/>
-            <img src="Apple Wallpaper Designs\10.png"/>
+            <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\1.png"/> </a>
+            <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\2.png"/> </a>
+            <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\3.png"/> </a>
+            <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\4.png"/> </a>
+            <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\5.png"/> </a>
+            <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\6.png"/> </a>
+            <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\7.png"/> </a>
+            <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\8.png"/> </a>
+            <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\9.png"/> </a>
+            <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\10.png"/> </a>
 
             <img src="Canva designs/doglove.png"/>
             <img src="Everyone is different. Everyone suffers. Why not live and let live.png" height="500px" width="350px">
