--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\9.png"/> </a>
             <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\10.png"/> </a>
 
-            <img src="Canva designs/doglove.png"/>
+            <a href="https://ashneeeet.github.io/doglove-backstory/"> <img src="Canva designs/doglove.png"/> </a>
             <img src="Everyone is different. Everyone suffers. Why not live and let live.png" height="500px" width="350px">
             <img src="Illustrations/booklovers.png"/>
             <img src="Illustrations/shapes n colors.jpg"/>
