--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <a href="https://ashneeeet.github.io/apple-wallpaper-design-backstory/"> <img src="Apple Wallpaper Designs\10.png"/> </a>
 
             <a href="https://ashneeeet.github.io/doglove-backstory/"> <img src="Canva designs/doglove.png"/> </a>
-            <img src="Everyone is different. Everyone suffers. Why not live and let live.png" height="500px" width="350px">
+            <a href="https://ashneeeet.github.io/everyone-poster-design-backstory/"><img src="Everyone is different. Everyone suffers. Why not live and let live.png" height="500px" width="350px"> </a>
             <img src="Illustrations/booklovers.png"/>
             <img src="Illustrations/shapes n colors.jpg"/>
 
