--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <a href="https://ashneeeet.github.io/doglove-backstory/"> <img src="Canva designs/doglove.png"/> </a>
             <a href="https://ashneeeet.github.io/everyone-poster-design-backstory/"><img src="Everyone is different. Everyone suffers. Why not live and let live.png" height="500px" width="350px"> </a>
             <a href="https://ashneeeet.github.io/booklovers-backstory/"> <img src="Illustrations/booklovers.png"/> </a>
-            <img src="Illustrations/shapes n colors.jpg"/>
+            <a href="https://ashneeeet.github.io/shapesncolors-backstory/"> <img src="Illustrations/shapes n colors.jpg"/> </a>
 
         </div>
         <div id="final">
