--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
         </div>
         <div id="dni">
             <h1>THE PART YOU'RE LOOKING FOR</h1>
-            
+            <img src="aestheticmen assignment 1.png"/>
+	    <img src="aestheticmen internship 2.png"/>
+	    <img src="first time poster editing on ps.png"/>
             <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <video src="P3.mp4"autostart="false"controls>
 		    </video> </a>
             <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <video src="Ad1.mp4"autostart="false"controls>
