--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         </div>
         <div id="dni">
             <h1>THE PART YOU'RE LOOKING FOR</h1>
-            <img src="aestheticmen assignment 1.png"/>
-	    <img src="aestheticmen assignment 2.png"/>
+            <a href="https://ashneeeet.github.io/aesttheticmen-assignments-backstory/"> <img src="aestheticmen assignment 1.png"/> </a>
+	    <a href="https://ashneeeet.github.io/aesttheticmen-assignments-backstory/"> <img src="aestheticmen assignment 2.png"/> </a>
 	    <img src="first time poster editing on ps.png"/>
             <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <video src="P3.mp4"autostart="false"controls>
 		    </video> </a>
