--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
         </div>
         <div id="dni">
             <h1>THE PART YOU'RE LOOKING FOR</h1>
+		<img src="1.png"/>
+		<img src="2.png"/>
+		<img src="3.png"/>
+		<img src="4.png"/>
+		<img src="5.png"/>
+		<img src="6.png"/>
+		<img src="SAMPLE 2.png"/>
             <a href="https://ashneeeet.github.io/aesttheticmen-assignments-backstory/"> <img src="aestheticmen assignment 1.png"/> </a>
 	    <a href="https://ashneeeet.github.io/aesttheticmen-assignments-backstory/"> <img src="aestheticmen assignment 2.png"/> </a>
 	    <img src="first time poster editing on ps.png"/>
