--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		<img src="SAMPLE 2.png"/>
             <a href="https://ashneeeet.github.io/aesttheticmen-assignments-backstory/"> <img src="aestheticmen assignment 1.png"/> </a>
 	    <a href="https://ashneeeet.github.io/aesttheticmen-assignments-backstory/"> <img src="aestheticmen assignment 2.png"/> </a>
-	    <img src="first time poster editing on ps.png"/>
+	    <a href="https://ashneeeet.github.io/covidmaskbackstory/"> <img src="first time poster editing on ps.png"/> </a>
             <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <video src="P3.mp4"autostart="false"controls>
 		    </video> </a>
             <a href="https://ashneeeet.github.io/linealdesignsbackstory/"> <video src="Ad1.mp4"autostart="false"controls>
