--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         </div>
         <div id="dni">
             <h1>THE PART YOU'RE LOOKING FOR</h1>
+		<a href= "https://ashneeeet.github.io/hermione-backstory/"> <img src="hermione granger.png" height="800px" width="800px"/> </a>
 		<a href="https://ashneeeet.github.io/amc-ind-assignments-backstory/"> <img src="1.png"/> </a>
 		<a href="https://ashneeeet.github.io/amc-ind-assignments-backstory/"> <img src="2.png"/> </a>
 		<a href="https://ashneeeet.github.io/amc-ind-assignments-backstory/"> <img src="3.png"/> </a>
