--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             
             }
              video{
-                height: 350px;
-                width: 450px;
+                height: 1000px;
+                width: 1000px;
                 margin-right: 20px;
                 margin-bottom: 20px;
                 border: rgb(202, 40, 140);
@@ -134,6 +134,7 @@
         </div>
         <div id="dni">
             <h1>THE PART YOU'RE LOOKING FOR</h1>
+		<video src="rollercoasters.mp4"autostart="false"controls> </video>
 		<a href= "https://ashneeeet.github.io/hermione-backstory/"> <img src="hermione granger.png" height="800px" width="800px"/> </a>
 		<a href="https://ashneeeet.github.io/amc-ind-assignments-backstory/"> <img src="1.png"/> </a>
 		<a href="https://ashneeeet.github.io/amc-ind-assignments-backstory/"> <img src="2.png"/> </a>
