--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
         <div id="dni">
             <h1>THE PART YOU'RE LOOKING FOR</h1>
 		<video src="rollercoasters.mp4"autostart="false"controls> </video>
+		<video src="GRUFET1" autostart="false"controls> </video>
+		<video src="GRUFET2" autostart="false"controls> </video>
+		<video src="GRUFET3" autostart="false"controls> </video>
+		<video src="GRUFET4" autostart="false"controls> </video>
+		<img src="4[1].png"/>
+		<img src="LOGO FOR FB PAGE.png"/>
+		<img src="id card design contest entry.png"/>
 		<a href= "https://ashneeeet.github.io/hermione-backstory/"> <img src="hermione granger.png" height="800px" width="800px"/> </a>
 		<a href="https://ashneeeet.github.io/amc-ind-assignments-backstory/"> <img src="1.png"/> </a>
 		<a href="https://ashneeeet.github.io/amc-ind-assignments-backstory/"> <img src="2.png"/> </a>
