--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div id="dni">
             <h1>THE PART YOU'RE LOOKING FOR</h1>
-		<video src="rollercoasters.mp4"autostart="false"controls> </video>
+		<a href="https://ashneeeet.github.io/rollercoasters-backstory/"> <video src="rollercoasters.mp4"autostart="false"controls> </video> </a>
 		<img src="4[1].png"/>
 		<img src="LOGO FOR FB PAGE.png"/>
 		<img src="id card design contest entry.png"/>
