--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <h1>THE PART YOU'RE LOOKING FOR</h1>
 		<a href="https://ashneeeet.github.io/rollercoasters-backstory/"> <video src="rollercoasters.mp4"autostart="false"controls> </video> </a>
 		<a href="https://ashneeeet.github.io/amc-ind-assignments-backstory/"> <img src="4[1].png"/> </a>
-		<img src="LOGO FOR FB PAGE.png"/>
+		<a href="https://ashneeeet.github.io/artign-backstory/"> <img src="LOGO FOR FB PAGE.png"/> </a>
 		<img src="id card design contest entry.png"/>
 		<a href= "https://ashneeeet.github.io/hermione-backstory/"> <img src="hermione granger.png" height="800px" width="800px"/> </a>
 		<a href="https://ashneeeet.github.io/amc-ind-assignments-backstory/"> <img src="1.png"/> </a>
